--- a/main.html
+++ b/main.html
@@ -10,7 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<header></header>
+	<section>
+		<div ><h1>Testimonials</h1></div>
+		<div class="first">This product is amazing!I would highly recommend it to anyone in need of a solution like this.
+		<br><p><em>~John Doe</em></p>
+		</div>
+		<div class="first">I have been using this for a weeks anow and it has completely transformed my workflow.
+		<br><p><em>~Jane Smith</em></p>
+		</div>
+		
+	</section>
 </body>
 
 </html>
