--- a/main.html
+++ b/main.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
- </script>
 	<section>
-		<div ><h1 class="test">Testimonials</h1></div>
-		<div class="first">This product is amazing!I would highly recommend it to anyone in need of a solution like this.
-		<br><p><em>~John Doe</em></p>
+		<div><h1>Testimonials</h1></div>
+		<div class="first">
+		    This product is amazing! I would highly recommend it to anyone in need of a solution like this.
+		    <br>
+		    <p><em>~John Doe</em></p>
 		</div>
-		<div class="first">I have been using this for a weeks anow and it has completely transformed my workflow.
-		<br><p><em>~Jane Smith</em></p>
+		<div class="first">
+		    I have been using this for a weeks now and it has completely transformed my workflow.
+		    <br>
+		    <p><em>~Jane Smith</em></p>
 		</div>
-		
 	</section>
 </body>
-
 </html>
