--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<section>
-		<div><h1>Testimonials</h1></div>
+		<div class="outer"><h1>Testimonials</h1></div>
 		<div class="first">
 		    This product is amazing! I would highly recommend it to anyone in need of a solution like this.
 		    <br>
