--- a/main.html
+++ b/main.html
@@ -5,16 +5,18 @@
 </head>
 <body>
 	<section>
+		<div class="out">
 		<div class="outer"><h1>Testimonials</h1></div>
 		<div class="first">
-		    This product is amazing! I would highly recommend it to anyone in need of a solution like this.
+		    <p>This product is amazing! I would highly recommend it to anyone in need of a solution like this.</p>
 		    <br>
-		    <p><em>~John Doe</em></p>
+		    <p class="p"><em>~John Doe</em></p>
 		</div>
 		<div class="first">
-		    I have been using this for a weeks now and it has completely transformed my workflow.
+		    <p>I have been using this for a weeks now and it has completely transformed my workflow.</p>
 		    <br>
-		    <p><em>~Jane Smith</em></p>
+		    <p class="p"><em>~Jane Smith</em></p>
+		</div>
 		</div>
 	</section>
 </body>
