--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 <body>
 	<section>
 		<div class="out">
-		<div class="outer"><h1>Testimonials</h1></div>
+		<h1>Testimonials</h1>
 		<div class="first">
 		    <p>This product is amazing! I would highly recommend it to anyone in need of a solution like this.</p>
 		    <p class="p"><em>~John Doe</em></p>
